[package]
name = "nusfjord_setup"
version = "1.0.0"
authors = ["Ben Hsu <benhsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
colored = "2"
clap = "2.33.3"
enumset = "1.0.6"
rand = "0.8.3"
serde = {version="1.0.123", features=["derive"]}
tui = "0.14.0"
     
